完成热门会议、最新会议、推荐会议页

--- a/src/main/resources/templates/event/event.html
+++ b/src/main/resources/templates/event/event.html
@@ -6,7 +6,7 @@
 <body>
 <section>
     <div class="content-wrapper">
-        <h3>会议</h3>
+        <h3>会议</h3>  <h6>(点击或划动"会议名称"可查看会议详情)</h6>
     </div>
     <table class="table table-bordered table-hover">
         <thead>
