--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -83,17 +83,17 @@
                             </a>
                         </li>
                         <li id="hotmeeting" class=" ">
-                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/recommend')">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/event/hotevent')">
                                 <span>—  热门会议</span>
                             </a>
                         </li>
                         <li id="newmeeting" class=" ">
-                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/vip')">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/event/latestevent')">
                                 <span>—  最新会议</span>
                             </a>
                         </li>
                         <li id="recommondmeeting" class=" ">
-                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/vip')">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/event/recommendevent')">
                                 <span>—  推荐会议</span>
                             </a>
                         </li>
