--- a/src/main/resources/templates/event/eventdetail.html
+++ b/src/main/resources/templates/event/eventdetail.html
@@ -4,147 +4,138 @@
 <section>
     <div class="content-wrapper">
         <h3 th:text="${event.title}"></h3>
+        <div th:if="${not #strings.isEmpty(event.status)}"
+             th:switch="${event.status}">
+            <p th:case="'A'" style="color: #20a6e2;">会议状态:待审核</p>
+            <p th:case="'B'" style="color: #000;">会议状态:已审核</p>
+            <p th:case="'C'" style="color: #f96413;">会议状态:已关闭</p>
+        </div>
 
         <form id="form" data-parsley-validate="true" class="form-horizontal">
             <div class="form-group">
                 <label class="col-sm-2 control-label"><span style="color: #ea3a45;">* </span>会议类型:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.eventType}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.eventType)}" th:text="${event.eventType}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label"><span style="color: #ea3a45;">* </span>学科:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.subject}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.subject)}" th:text="${event.subject}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">简介:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.eventDesc}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.eventDesc)}" th:text="${event.eventDesc}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label"><span style="color: #ea3a45;">* </span>开始时间:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${#calendars.format(event.startDate,'yyyy/MM/dd HH:mm')}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.startDate)}" th:text="${#calendars.format(event.startDate,'yyyy/MM/dd HH:mm')}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label"><span style="color: #ea3a45;">* </span>结束时间:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${#calendars.format(event.endDate,'yyyy/MM/dd HH:mm')}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.endDate)}" th:text="${#calendars.format(event.endDate,'yyyy/MM/dd HH:mm')}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">地址:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.address}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.address)}" th:text="${event.address}"> </h5>
                 </div>
             </div>
 
             <div class="form-group">
                 <label class="col-sm-2 control-label">联系人:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.contact}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.contact)}" th:text="${event.contact}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">联系电话:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.contactPhone}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.contactPhone)}" th:text="${event.contactPhone}"> </h5>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">会议状态:</label>
-                <div class="col-sm-8">
-                    <div th:if="${not #strings.isEmpty(event.status)}"
-                         th:switch="${event.status}">
-                        <p th:case="'A'">待审核</p>
-                        <p th:case="'B'">已审核</p>
-                        <p th:case="'C'">已关闭</p>
-                    </div>
-                </div>
-            </div>
+
             <div class="form-group">
                 <label class="col-sm-2 control-label">创建时间:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.stateDate}"> </h5>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">联系电话:</label>
-                <div class="col-sm-8">
-                    <h5 th:text="${event.contactPhone}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.stateDate)}" th:text="${#calendars.format(event.stateDate, 'yyyy/MM/dd HH:mm')}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">会议关联发布人id:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.userId}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.userId)}" th:text="${event.userId}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">现场开始报道时间:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${#calendars.format(event.checkInDate,'yyyy/MM/dd HH:mm')}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.checkInDate)}" th:text="${#calendars.format(event.checkInDate,'yyyy/MM/dd HH:mm')}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">线上注册截止时间:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${#calendars.format(event.registerEndDate,'yyyy/MM/dd HH:mm')}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.registerEndDate)}" th:text="${#calendars.format(event.registerEndDate,'yyyy/MM/dd HH:mm')}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">学分类型:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.creditType}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.creditType)}" th:text="${event.creditType}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">学分数:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.creditNum}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.creditNum)}" th:text="${event.creditNum}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">banner图:</label>
                 <div class="col-sm-8">
-                    <img th:src="'http://www.medmeeting.com/' + ${event.banner}"> </img>
+                    <img th:if="${not #strings.isEmpty(event.banner)}" th:src="'http://www.medmeeting.com/' + ${event.banner}"> </img>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">底部内容:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.footContent}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.footContent)}" th:text="${event.footContent}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">是否标为热门会议:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.hot == 'true' ? '是' : '否'}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.hot)}" th:text="${event.hot == 'true' ? '是' : '否'}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">是否标为最新会议:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.news == 'true' ? '是' : '否'}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.news)}" th:text="${event.news == 'true' ? '是' : '否'}"> </h5>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">是否标为推荐会议:</label>
                 <div class="col-sm-8">
-                    <h5 th:text="${event.hot == 'groom' ? '是' : '否'}"> </h5>
+                    <h5 th:if="${not #strings.isEmpty(event.groom)}" th:text="${event.hot == 'groom' ? '是' : '否'}"> </h5>
                 </div>
             </div>
-            <div class="form-group">
+
+            <div class="form-group" th:if="${event.status == 'A'}">
                 <h3>    审核: </h3>
                 <div class="col-sm-2 col-sm-offset-2">
-                    <button id="reject" class="btn btn-block btn-primary mt-lg btn-lg">拒绝</button>
+                    <button id="admit" class="btn btn-block btn-primary mt-lg btn-lg" th:onclick="'javascript:verify(' + ${event.id} +')'" >通过</button>
                 </div>
                 <div class="col-sm-2 col-sm-offset-2">
-                    <button id="admit" class="btn btn-block btn-primary mt-lg btn-lg">通过</button>
+                    <button id="reject" class="btn btn-block btn-primary mt-lg btn-lg">拒绝</button>
                 </div>
             </div>
         </form>
@@ -154,37 +145,23 @@
 </section>
 </body>
 <script type='text/javascript'>
-    $(function () {
-        toastr.options = {
-            'closeButton': true,
-            'positionClass': 'toast-top-center',
-            'timeOut': '5000',
-        };
-        $("#addFavorites").click(function () {
-            var ok = $('#form').parsley().isValid({force: true});
-            if (ok) {
-                $.ajax({
-                    async: false,
-                    type: 'POST',
-                    dataType: 'json',
-                    data: '',
-                    url: '/case/add/' + $("#title").val() + '/' + $("#chief_complain").val() + '/' + $("#chief_complain_image").val() + '/' + $("#body_check").val() + '/' + $("#body_check_image").val() + '/' + $("#medical_diagnosis").val() + '/' + $("#medical_diagnosis_image").val() + '/' + $("#follow_up").val() + '/' + $("#follow_up_image").val(),
-                    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                        console.log(XMLHttpRequest);
-                        console.log(textStatus);
-                        console.log(errorThrown);
-                    },
-                    success: function (response) {
-                        if (response.rspCode == '000000') {
-                            locationUrl('/case/list');
-                            toastr.success('新病例创建成功！', '操作成功');
-                        } else {
-                            toastr.error(response.rspMsg, '操作失败');
-                        }
-                    }
-                });
+    function verify(id) {
+        $.ajax({
+            async: false,
+            type: 'PUT',
+            dataType: 'json',
+            data: "",
+            url: '/event/verify/' + id,
+            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                console.log(XMLHttpRequest);
+                console.log(textStatus);
+                console.log(errorThrown);
+            },
+            success: function (response) {
+                locationUrl('/event/allevent')
+                $("#errorMsg").html("审核通过").show(300).delay(3000).hide(300);
             }
         });
-    });
+    }
 </script>
 </html>
